fix panel toggle

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,5 +1,5 @@
-<header class="item-header sticky-header">
-  <div class="item-type">
+<header class="item-header">
+  <div class="item-header__type">
     <span>Bug</span>
   </div>
 
@@ -15,7 +15,7 @@
     </div>
 
     <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
-      <div class="pmx-selector__item">
+      <div class="pmx-selector__item pmx-selector__item--selected JS_toggle-progress">
         <div class="pmx-selector__block">
           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
         </div>
@@ -25,7 +25,7 @@
           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
         </div>
       </div>
-      <div class="pmx-selector__item pmx-selector__item--selected">
+      <div class="pmx-selector__item JS_toggle-comments">
         <div class="pmx-selector__block">
           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ग</span>
         </div>
