--- a/_includes/blocks/item-main.html
+++ b/_includes/blocks/item-main.html
@@ -1,5 +1,4 @@
-<div class="document__data">
-    <header class="header">
+    <header class="item-main__header">
         <span class="line">​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.​‌.
         </span>
         <h3>Set-up request</h3>
@@ -160,4 +159,3 @@
         </div><!-- /.tabs-panels__panel -->
     </div><!-- /.tabs-panels__panels -->
   </div><!-- /.tabs -->
-</div><!-- /.document__data -->
