--- a/_includes/blocks/item-progress.html
+++ b/_includes/blocks/item-progress.html
@@ -1,4 +1,3 @@
-<aside class="document__info">
     <div class="tabs">
     <div class="tabs-nav">
       <ul>
@@ -10,37 +9,37 @@
 
     <div class="tabs-panels">
         <div class="tabs-panels__panel" tabindex="1">
-            <ul class="item-steps">
-                <li class="item-steps__step item-steps__step--resloved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Project</span>
+            <ul class="item-progress__steps">
+                <li class="item-progress__step item-progress__step--resloved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Project</span>
                 </li>
-                <li class="item-steps__step item-steps__step--current">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Doelstelling</span>
+                <li class="item-progress__step item-progress__step--current">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Doelstelling</span>
                 </li>
-                <li class="item-steps__step item-steps__step--unresolved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Milestone and link indicator</span>
+                <li class="item-progress__step item-progress__step--unresolved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Milestone and link indicator</span>
                 </li>
-                <li class="item-steps__step item-steps__step--unresolved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Step 3</span>
-                    <div class="item-steps__stepInfo">
+                <li class="item-progress__step item-progress__step--unresolved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Step 3</span>
+                    <div class="item-progress__stepInfo">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
-                <li class="item-steps__step item-steps__step--unresolved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Set-up request</span>
+                <li class="item-progress__step item-progress__step--unresolved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Set-up request</span>
                 </li>
-                <li class="item-steps__step item-steps__step--unresolved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Step 5</span>
+                <li class="item-progress__step item-progress__step--unresolved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Step 5</span>
                 </li>
-                <li class="item-steps__step item-steps__step--unresolved">
-                    <span class="item-steps__stepSymbol"></span>
-                    <span class="item-steps__stepLabel">Finished</span>
+                <li class="item-progress__step item-progress__step--unresolved">
+                    <span class="item-progress__stepSymbol"></span>
+                    <span class="item-progress__stepLabel">Finished</span>
                 </li>
             </ul>
         </div><!-- /.tabs__panel -->
@@ -51,4 +50,3 @@
     </div><!-- /.tabs__panels -->
 
   </div><!-- /.tabs -->
-</aside>
