--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -1,8 +1,8 @@
 <div id="ctl00_pagebody_container" class="pagebody-container">
   <div class="pagebody">
-    <div id="datalist-wrapper" class="content-wrapper ">
+    <div id="datalist-wrapper" class="content-wrapper">
       <div class="content">
-        <div id="itemboxview" class="databox itembox" style="">
+        <div id="itemboxview" class="databox itembox">
           <ul class="itembox">
             <li class="top">
               <ul>
@@ -72,7 +72,7 @@
                     <ul class="columns">
                       <li id="item-674444-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 32%;">
                         <div class="cell" title="Milestone 2018-02-06">
-                          <div class="safetyNet notText " style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/674444">Milestone 2018-02-06</a></div>
+                          <div class="safetyNet notText" style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/674444">Milestone 2018-02-06</a></div>
                         </div>
                       </li>
                       <li id="item-674444-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 32%;">
@@ -90,7 +90,7 @@
                     <ul class="columns">
                       <li id="item-672392-0-" class="column column0 level0 variable  colname_col_sf2 titlefilter" style="width: 32%;">
                         <div class="cell" title="Milestone 2018-01-23">
-                          <div class="safetyNet notText " style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/672392">Milestone 2018-01-23</a></div>
+                          <div class="safetyNet notText" style="margin-left:0px;"><a class="relations nochildren"></a><a href="/dashboard/55754f/672392">Milestone 2018-01-23</a></div>
                         </div>
                       </li>
                       <li id="item-672392-3-" class="column column3 level0 medium  colname_col_sf15" style="width: 32%;">
