--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,4 +1,4 @@
-  <div class="app cf document__info--visible">
+  <div class="app cf item-progress--visible">
 
       <div class="app__overlay"></div>
 
