--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -17,6 +17,8 @@
 @import "blocks/app-header.css";
 
 @import "blocks/item-header.css";
+@import "blocks/item-body.css";
+@import "blocks/item-progress.css";
 @import "blocks/item-comments.css";
 
 @import "blocks/applicable-slider.css";
@@ -24,7 +26,6 @@
 // Components
 @import "components/breadcrumbs.css";
 @import "components/tabs.css";
-@import "components/item-steps.css";
 
 @import "components/itemBox.css";
 @import "components/selector.css";
