--- a/sass/app.scss
+++ b/sass/app.scss
@@ -39,8 +39,29 @@ body.page-Popups .multiSelector {
 
 .app {
   position: relative;
-  background-color: #F4F4F4;
+
+  &__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.6);
+    z-index: 2;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .3s ease-in-out;
+  }
+
+  &__container {
+    position: relative;
+    left: 0;
+    transition: all .3s ease-in-out;
+  }
 }
+
+
+
 
 
 .app.overlay--visible .app__overlay,
@@ -54,175 +75,4 @@ body.page-Popups .multiSelector {
 .add-comment--visible .document__comments .add-comment {
   z-index: 999;
   box-shadow: 0 0 100px rgba(0,0,0,.5);
-}
-
-
-
-
-
-
-
-
-
-
-
-.app__overlay {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0,0,0,.6);
-  z-index: 2;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity .3s ease-in-out;
-}
-
-
-
-
-
-
-.app__container {
-  position: relative;
-  left: 0;
-  background-color: #2C5386;
-  transition: all .3s ease-in-out;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.document__content {
-    position: relative;
-    display: inline-block;
-    font-size: 0;
-    width: 100%;
-}
-
-
-
-
-
-.panel__left {
-  float: left;
-  width: 25%;
-  transition: all .3s ease-in-out;
-
-}
-.document__comments--visible .panel__center {
-  width: 50%;
-}
-.panel__center {
-  float: left;
-  width: 50%;
-  width: 75%;
-  transition: all .3s ease-in-out;
-}
-
-
-
-
-.document__info-data {
-    margin-bottom: 50px;
-}
-.document__info {
-  font-size: 14px;
-}
-
-
-
-
-
-
-.document__data {
-    position: relative;
-    background-color: #FFF;
-    color: #000;
-    font-size: 16px;
-    transition: all .3s ease-in-out;
-    box-shadow: 0 10px 100px rgba(0,0,0,.1);
-    padding-bottom: 10px;
-}
-.document__data .header {
-    position: relative;
-    padding: 15px 20px;
-    overflow: hidden;
-    background-color: #FFF;
-}
-.document__data .header .line {
-    position: absolute;
-    bottom: 6px;
-    left: 0;
-    white-space: nowrap;
-    letter-spacing: 3px;
-    color: #CCC;
-    width: 100%;
-    line-height: 0;
-    font-size: 12px;
-}
-
-
-
-
-.document__data .header h3 {
-    position: relative;
-    display: inline-block;
-    font-size: 20px;
-}
-.document__data .header .actions {
-    float: right;
-}
-.document__data .header .actions ul li {
-    display: inline-block;
-}
-.document__data .header .actions ul li span {
-    display: block;
-    position: relative;
-    background-color: #11ceff;
-    background: linear-gradient(to right, rgba(3,163,221,1) 0%,rgba(33,194,249,1) 100%);
-    color: #FFF;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-style: italic;
-    font-weight: 700;
-    letter-spacing: 1px;
-    padding: 2px 14px;
-    margin: 0 0 0 5px;
-    border-radius: 25px;
-    cursor: pointer;
-}
-.document__data .header .actions ul li span.cancel {
-    background-color: transparent;
-    background: none;
-    color: red;
-}
-.document__data .tabs .tabs__nav {
-    padding: 0 10px;
-}
-.document__data .tabs .tabs__panels .tabs__panel {
-  padding: 0;
 }
