--- a/sass/blocks/item-progress.scss
+++ b/sass/blocks/item-progress.scss
@@ -1,23 +1,52 @@
 ---
 ---
 
-.item-steps {
+.item-progress {
   position: relative;
+  float: left;
+  width: 0%;
+  display: none;
+  padding: 0 15px 0 0;
 
-  &::before {
-    content: '';
-    position: absolute;
-    width: 2.5px;
-    border-radius: 3px;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #29c5ff;
-    background: -moz-linear-gradient(top, #29c5ff 19%, #c80000 29%);
-    background: -webkit-linear-gradient(top, #29c5ff 19%,#c80000 29%);
-    background: linear-gradient(to bottom, #29c5ff 19%,#c80000 29%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#29c5ff', endColorstr='#c80000',GradientType=0 );
-    display: none;
+  &--visible {
+    .item-progress {
+      display: block;
+      width: 25%;
+    }
+
+    &.item-comments--visible {
+      .item-main {
+        width: 50%;
+      }
+    }
+
+    .item-main {
+      width: 75%;
+    }
+  }
+
+  &__inner {
+
+  }
+
+  &__steps {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 2.5px;
+      border-radius: 3px;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: #29c5ff;
+      background: -moz-linear-gradient(top, #29c5ff 19%, #c80000 29%);
+      background: -webkit-linear-gradient(top, #29c5ff 19%,#c80000 29%);
+      background: linear-gradient(to bottom, #29c5ff 19%,#c80000 29%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#29c5ff', endColorstr='#c80000',GradientType=0 );
+      display: none;
+    }
   }
 
   &__step {
@@ -57,7 +86,7 @@
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#29c5ff', endColorstr='#c80000',GradientType=0 );
       }
 
-      .item-steps__stepLabel {
+      .item-progress__stepLabel {
         border-bottom: 2px solid #000;
         padding: 0 0 3px 0;
         font-weight: 600;
@@ -70,11 +99,11 @@
         background-color: #c80000;
       }
 
-      .item-steps__stepSymbol {
+      .item-progress__stepSymbol {
         background-color: #c80000;
       }
 
-      .item-steps__stepLabel {
+      .item-progress__stepLabel {
         color: #CACACA;
         font-style: normal;
       }
