update toggle switch for progress/comments in item header

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -14,20 +14,15 @@
       </div>
     </div>
 
-    <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
+    <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
       <div class="pmx-selector__item pmx-selector__item--selected JS_toggle-progress">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
-        </div>
-      </div>
-      <div class="pmx-selector__item">
-        <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">द</span>
+          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ण</span>
         </div>
       </div>
       <div class="pmx-selector__item JS_toggle-comments">
         <div class="pmx-selector__block">
-          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">ग</span>
+          <span class="pmx-selector__blockPart pmx-selector__blockPart--field">स</span>
         </div>
       </div>
     </div>
