Selector: added JS_selector

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -161,7 +161,7 @@
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 3;" data-flex="3">
                       <div class="itemBoxTable__bodyCellInner">
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
+                          <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
