--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -3,7 +3,7 @@
     <div class="newpickercontent">
       <div id="tabs" class="old-multiselect-tabs">
 
-        <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required JS_pmx-selector--incl-excl JS_pmx-selector--old">
+        <div class="pmx-selector  JS_selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required JS_pmx-selector--incl-excl JS_pmx-selector--old">
           <div class="pmx-selector__item JS_pmx-selector__item--include pmx-selector__item--selected">
             <div class="pmx-selector__block ">
               <span class="" style="">Include</span>
