Selector: JS_SelectorItem

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -162,28 +162,28 @@
                       <div class="itemBoxTable__bodyCellInner">
 
                           <div class="pmx-selector JS_selector pmx-selector--expanded pmx-selector--multiSelect">
-                            <div class="pmx-selector__item pmx-selector__item--selected">
+                            <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
                                 <span class="pmx-selector__blockSeperator">•</span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">UI/UX</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__item">
+                            <div class="pmx-selector__item  JS_selectorItem">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
                                 <span class="pmx-selector__blockSeperator">•</span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__item pmx-selector__item--selected">
+                            <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #e30022;">ग़</span>
                                 <span class="pmx-selector__blockSeperator">•</span>
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</span>
                               </div>
                             </div>
-                            <div class="pmx-selector__item">
+                            <div class="pmx-selector__item  JS_selectorItem">
                               <div class="pmx-selector__block">
                                 <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
                                 <span class="pmx-selector__blockSeperator">•</span>
