update search/filter fields to framework

--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -24,22 +24,23 @@
 
     <div class="tabs-panels">
       <div class="tabs-panels__panel" tabindex="1">
-        <!-- tab contents -->
         {% include blocks/app-nav-tab1.html %}
-      </div><!-- /.tabs__panel -->
+      </div>
+      <!-- /.tabs__panel -->
       <div class="tabs-panels__panel" tabindex="2">
-        <!-- tab contents -->
         {% include blocks/app-nav-tab2.html %}
-      </div><!-- /.tabs__panel -->
+      </div>
+      <!-- /.tabs__panel -->
       <div class="tabs-panels__panel" tabindex="3">
-        <!-- tab contents -->
 
-      </div><!-- /.tabs__panel -->
+      </div>
+      <!-- /.tabs__panel -->
       <div class="tabs-panels__panel" tabindex="4">
-        <!-- tab contents -->
 
-      </div><!-- /.tabs__panel -->
-    </div><!-- /.tabs__panels -->
+      </div>
+      <!-- /.tabs__panel -->
+    </div>
+    <!-- /.tabs__panels -->
   </div>
 
 </div>
