--- a/_includes/blocks/colorPicker-suggestions.html
+++ b/_includes/blocks/colorPicker-suggestions.html
@@ -1,4 +1,4 @@
-<div class="itemBox itemBox--children itemBox--suggestions JS_itemBox--suggestions" style="display: none;">
+<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--suggestions" style="display: none;">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
