--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -1,4 +1,4 @@
-<div class="itemBox itemBox--children itemBox--tagPicker JS_itemBox--colors">
+<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--colors">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
