--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,15 +1,27 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-columnpicker">
 
-  <div class="multiSelector__box JS_multiSelector__box">
+    <div class="itemBox">
+      <div class="itemBoxTable">
+        <div class="itemBoxBody">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner">
 
-    <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through items">
+                    <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through items">
+
+                  </div>
+              </li>
+              <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+
+                    <i class="itemBoxTable__action">ञ</i>
+
+                  </div>
+              </li>
+          </ul>
+        </div>
+      </div>
     </div>
-
-  </div>
-  <!-- /.multiSelector__box -->
-
-  <div class="multiSelector__box ">
 
     <div class="itemBox">
       <div class="itemBoxTable">
@@ -531,7 +543,6 @@
       </div>
     </div>
     <!-- /.itemBox -->
-  </div>
-  <!-- /.multiSelector__box -->
+
 </div>
 <!-- /.multiSelector -->
