--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -1,15 +1,20 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-1">
 
-  <div class="multiSelector__box JS_multiSelector__boxx">
+    <div class="itemBox JS_multiSelector__boxx">
+      <div class="itemBoxTable">
+        <div class="itemBoxBody">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner">
 
-    <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through items">
+                    <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through items">
+
+                  </div>
+              </li>
+          </ul>
+        </div>
+      </div>
     </div>
-
-  </div>
-  <!-- /.multiSelector__box -->
-
-  <div class="multiSelector__box">
 
     <div class="itemBox JS_multiSelector__box--optionsChildren">
       <div class="itemBoxTable">
@@ -20,7 +25,7 @@
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add"></i>
+                <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
               </div>
             </li>
           </ul>
@@ -30,7 +35,7 @@
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add"></i>
+                <i class="itemBoxTable__action itemBoxTable__action--add">✓</i>
               </div>
             </li>
           </ul>
@@ -40,7 +45,7 @@
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add"></i>
+                <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
               </div>
             </li>
           </ul>
@@ -48,13 +53,6 @@
       </div>
     </div>
     <!-- /.itemBox -->
-  </div>
-</div>
-</div>
-<!-- /.itemBox -->
-
-</div>
-<!-- /.multiSelector__box -->
 
 </div>
 <!-- /.multiSelector -->
