--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -1,15 +1,21 @@
 <div class="multiSelector multiSelector--popup"  id="new-multiselect">
 
-  <div class="multiSelector__box JS_multiSelector__box">
+    <div class="itemBox JS_multiSelector__box">
+      <div class="itemBoxTable">
+        <div class="itemBoxBody">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner">
 
-    <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput" placeholder="filter through columns">
+                    <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through columns">
+
+                  </div>
+              </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
-  </div>
-  <!-- /.multiSelector__box -->
-
-  <div class="multiSelector__box ">
     <div class="itemBox">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
@@ -166,9 +172,6 @@
       </div>
     </div>
     <!-- /.itemBox -->
-
-  </div>
-  <!-- /.multiSelector__box -->
 
 </div>
 <!-- /.multiSelector -->
