--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,17 +1,33 @@
-<div class="multiSelector multiSelector--popup multiSelector--semsearch JS_semsearch-1">
-  <div class="multiSelector__box">
-    <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="search through items">
-    </div>
-  </div>
-  <!-- /.multiSelector__box -->
+<div class="multiSelector multiSelector--popup multiSelector--popup-semsearch JS_semsearch-1">
 
-  <div class="multiSelector__box">
+    <div class="itemBox">
+      <div class="itemBoxTable">
+        <div class="itemBoxBody">
+          <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner">
+
+                    <input type="search" class="JS_multiSelector__filterInput" placeholder="search through items">
+
+                  </div>
+              </li>
+              <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+
+                    <i class="itemBoxTable__action">ञ</i>
+
+                  </div>
+              </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div class="itemBox">
       <div class="itemBoxTable">
           <div class="itemBoxBody">
             <ul class="itemBoxTable__bodyRow">
-                <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner">
 
                       <div class="pmx-selector pmx-selector--readonly">
@@ -28,7 +44,7 @@
                 </li>
             </ul>
               <ul class="itemBoxTable__bodyRow">
-                  <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                  <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner">
 
                         <div class="pmx-selector pmx-selector--readonly">
@@ -45,7 +61,7 @@
                   </li>
               </ul>
               <ul class="itemBoxTable__bodyRow">
-                  <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                  <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner">
 
                         <div class="pmx-selector pmx-selector--readonly">
@@ -62,7 +78,7 @@
                   </li>
               </ul>
               <ul class="itemBoxTable__bodyRow">
-                  <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                  <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
                       <div class="itemBoxTable__bodyCellInner">
 
                         <div class="pmx-selector pmx-selector--readonly">
@@ -82,5 +98,5 @@
       </div>
     </div>
     <!-- /.itemBox -->
-  </div>
+
 </div>
