--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,10 @@
 
   <body class="page-{{ page.title }}">
     <div class="overlay"></div>
-    {{ content }}
+
+    <div class="app cf">
+      {{ content }}
+    </div>
   </body>
 
   {% include foot.html %}
