--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,8 @@
     <main class="app__container">
       <header class="app-header cf">
         {% include blocks/app-header.html %}
+
+        {% include blocks/breadcrumbs.html %}
       </header>
 
       <div class="item item--story">
