--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -1,176 +1,189 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-tagpicker">
-  <div class="multiSelector__box JS_multiSelector__box">
-    <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput JS_multiSelector__filterInput" placeholder="filter through tags">
-    </div>
-    {% include blocks/colorPicker-suggestions.html %}
-  </div>
-  <!-- /.multiSelector__box -->
 
-  <div class="multiSelector__box">
-    <div class="itemBox">
-      <div class="itemBoxTable">
-        <div class="itemBoxBody">
-          <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-              </div>
-            </li>
+  <div class="itemBox JS_multiSelector__box">
+    <div class="itemBoxTable">
+      <div class="itemBoxBody">
+        <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
-                <i>Selected</i>
-              </div>
-            </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
-              </div>
-            </li>
-          </ul>
+                <div class="itemBoxTable__bodyCellInner">
 
-          <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
-            <div class="itemBoxTable">
-              <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
-                <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      xamarin_tablet
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
-                    </div>
-                  </li>
-                </ul>
-                {% include blocks/colorSelector-children.html %}
-              </div>
-            </div>
-          </div>
-          <!-- /.itemBox -->
+                  <input type="search" class="JS_multiSelector__filterInput" placeholder="filter through tags">
 
-          <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
-              </div>
+                </div>
             </li>
-            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-              <div class="itemBoxTable__bodyCellInner">
-                All
-              </div>
-            </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
-              </div>
-            </li>
-            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
-              <div class="itemBoxTable__bodyCellInner">
-                <i class="itemBoxTable__action itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</i>
-              </div>
-            </li>
-          </ul>
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
+                <div class="itemBoxTable__bodyCellInner">
 
-          <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
-            <div class="itemBoxTable">
-              <div class="itemBoxBody">
-                <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      xamarin_tablet
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
-                    </div>
-                  </li>
-                </ul>
+                  <i class="itemBoxTable__action">ञ</i>
 
-                {% include blocks/colorSelector-children.html %}
-
-                <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
-                      </div>
-                    </li>
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      xamarin_mobile
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
-                    </div>
-                  </li>
-                </ul>
-                  {% include blocks/colorSelector-children.html %}
-                <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
-                      </div>
-                    </li>
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      2013_Maintenance
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
-                    </div>
-                  </li>
-                </ul>
-                  {% include blocks/colorSelector-children.html %}
-                <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                    <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
-                      <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
-                      </div>
-                    </li>
-                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
-                      workaround_available
-                    </div>
-                  </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
-                      <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
-                    </div>
-                  </li>
-                </ul>
-                  {% include blocks/colorSelector-children.html %}
-              </div>
-            </div>
-          </div>
-          <!-- /.itemBox -->
-        </div>
+                </div>
+            </li>
+        </ul>
+        {% include blocks/colorPicker-suggestions.html %}
       </div>
     </div>
-    <!-- /.itemBox -->
-
   </div>
-  <!-- /.multiSelector__box -->
+
+  <div class="itemBox">
+    <div class="itemBoxTable">
+      <div class="itemBoxBody">
+        <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
+              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--selectedText">
+              <i>Selected</i>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
+              <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
+            </div>
+          </li>
+        </ul>
+
+        <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
+          <div class="itemBoxTable">
+            <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    xamarin_tablet
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                  </div>
+                </li>
+              </ul>
+              {% include blocks/colorSelector-children.html %}
+            </div>
+          </div>
+        </div>
+        <!-- /.itemBox -->
+
+        <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
+              <i class="itemBoxTable__action itemBoxTable__action--toggle">ऄ</i>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+            <div class="itemBoxTable__bodyCellInner">
+              All
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
+              <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+            </div>
+          </li>
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
+            <div class="itemBoxTable__bodyCellInner">
+              <i class="itemBoxTable__action itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</i>
+            </div>
+          </li>
+        </ul>
+
+        <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
+          <div class="itemBoxTable">
+            <div class="itemBoxBody">
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                    <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    xamarin_tablet
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                  </div>
+                </li>
+              </ul>
+
+              {% include blocks/colorSelector-children.html %}
+
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+                    </div>
+                  </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    xamarin_mobile
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                  </div>
+                </li>
+              </ul>
+                {% include blocks/colorSelector-children.html %}
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
+                    </div>
+                  </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    2013_Maintenance
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                  </div>
+                </li>
+              </ul>
+                {% include blocks/colorSelector-children.html %}
+              <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                  <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
+                    </div>
+                  </li>
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                    workaround_available
+                  </div>
+                </li>
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                  </div>
+                </li>
+              </ul>
+                {% include blocks/colorSelector-children.html %}
+            </div>
+          </div>
+        </div>
+        <!-- /.itemBox -->
+      </div>
+    </div>
+  </div>
+  <!-- /.itemBox -->
 
 </div>
 <!-- /.multiSelector -->
