--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -87,13 +87,9 @@
           width: 100%;
           height: 100%;
           padding: 0 15px;
-
           line-height: 50px;
-
           overflow: hidden;
           text-overflow: ellipsis;
-
-
         }
       }
     }
@@ -284,6 +280,12 @@
 
             top: 50%;
             transform: translateY(-50%);
+          }
+
+          input[type="text"],
+          input[type="search"] {
+            width: 100%;
+            height: 100%;
           }
         }
       }
