--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="itemBox">
+  <div class="itemBox JS_multiSelector__box">
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
